Fix alignment styling

--- a/style.css
+++ b/style.css
@@ -1,19 +1,12 @@
-@media (max-width:400px) {
-    h1 {
-        font-size: 20px;
-    }
-    #current-icon {
-        height: 60px;
-    }
-}
-
+/* HEADER */
 h1 {
     font-size: 60px;
     color: white;
+    font-family: 'Quattrocento Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
-    background-color: #5558af;
+    background-color: #1E1E45;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 20px;
@@ -21,11 +14,19 @@ header {
     margin-bottom: 50px;
 }
 
+#headerIcon {
+    height: 75px;
+}
+
+
+
+/* OVERALL BODY */
+
 body {
     background-image: url("https://connietran-dev.github.io/weather-dashboard/Assets/images/background.png");
     background-position: center;
     background-size: cover;
-    font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 300;
     margin: 0;
     padding: 0;
@@ -58,11 +59,15 @@ body {
     text-align: center;
 }
 
+
+/* ASIDE */
+
 aside {
     background-color: white;
 }
 
 input {
+    outline: 1px solid black;
     margin-bottom: 20px;
 }
 
@@ -75,16 +80,27 @@ li {
     border-radius: 5px;
 }
 
+
+/* WEATHER ELEMENTS */
+
 h2 {
     margin: 0 20px;
 }
 
 #currentDate {
     font-size: 20px;
-    margin: 0;
+    margin: 0 20px;
     padding-top: 5px;
-    /* color: #4896E8; */
 }
+
+#currentDescription {
+    margin: 7px 20px 0 20px;
+}
+
+.weatherDescription {
+    font-style: italic;
+}
+
 
 .UV {
     background-color: red;
@@ -113,4 +129,16 @@ h4 {
 .units {
     font-size: 15px;
     font-weight: 300;
+}
+
+
+/* MEDIA QUERIES */
+
+@media (max-width:400px) {
+    h1 {
+        font-size: 40px;
+    }
+    #current-icon {
+        height: 60px;
+    }
 }
